--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "openai": "^4.19.0",
     "react": "^18",
